--- a/sPIke.SolidWorks.Standalone/sPIke.SolidWorks.Standalone.csproj
+++ b/sPIke.SolidWorks.Standalone/sPIke.SolidWorks.Standalone.csproj
@@ -86,6 +86,7 @@
       <DependentUpon>GUI.cs</DependentUpon>
     </Compile>
     <Compile Include="GUIcode.cs" />
+    <Compile Include="main.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SolidWorksCreation.cs" />
